tests/94_parser_error2.scj
// Test 94: Parser error - missing assignment value
// Test: error handling for incomplete variable declaration
let x =
// ExpectError: Unexpected token ''
